# mempatcher

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
res/: mempatcher.rc
src/: hooks.cc  hooks.h  main.cc  ntdll.h  parser.cc  parser.h  patch.cc  patch.h  pch.h  util.cc  util.h
test/: CMakeLists.txt  parser.cc
